# full_backend_django_rest_template

./: .gitignore  .pylintrc  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: Code_Formater.yml
api/: admin.py
api/migrations/: 0001_initial.py
full_backend_django_rest_template/: asgi.py  settings.py  wsgi.py
