[tool.poetry]
name = "full-backend-django-rest-template"
version = "0.1.0"
description = "A Django REST Framework template"
authors = ["abdollah mohebbi <abdollah.promail@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.1"
mysqlclient = "^2.2.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
