[tool.poetry]
name = "full-backend-django-rest-template"
version = "0.1.0"
description = "A Django REST Framework template"
authors = ["abdollah mohebbi <abdollah.promail@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.1"
mysqlclient = "^2.2.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
pylint = "^3.2.2"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = [
    "migrations",
    "__pycache__",
    ".venv",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
